# raf-live

./: .gitignore  config.yaml
src/detection/: package.xml  setup.py
src/detection/detection/: face_detection_node.py  face_detection_service_node.py  food_detection_action_node.py  food_detection_node.py  food_detection_node2.py  food_detection_service_node.py  old_food_detection_node.py  simplified_food_detection_node.py  voice_node.py
src/detection/detection/detectors/: __init__.py  base_detector.py  dinox_detector.py  gemini_detector.py
src/detection/detection/tracking/: __init__.py  grasp_points.py  sam2_tracker.py  transforms.py
src/detection/detection/visualization/: __init__.py  image_visualizer.py  rviz_visualizer.py
src/detection/prompts/: dinox_identification.txt  gemini_identification.txt  gpt_identification.txt
src/kortex_controller/: CMakeLists.txt  package.xml
src/kortex_controller/include/kortex_controller/: controller.hpp
src/kortex_controller/launch/: controller.launch.py
src/kortex_controller/scripts/: autonomous_checker.py  example_twist.cpp  face_detection.py  multimodal.py  orchestrator.py  orchestrator2.py  robot_controller_ros2.py  visual_servoing.py  voice.py
src/kortex_controller/src/: controller.cpp
src/raf_bringup/: CMakeLists.txt  package.xml
src/raf_bringup/launch/: raf_services.launch.py  raf_system.launch.py
src/raf_interfaces/: CMakeLists.txt  package.xml
src/raf_interfaces/action/: FoodServoing.action  MoveToMouth.action  PickupFood.action
src/raf_interfaces/msg/: DetectedFood.msg  ForceFeedback.msg  Twist.msg
src/raf_interfaces/srv/: GetPose.srv  IdentifyFood.srv  MoveToMouth.srv  ProcessImage.srv  SetGripper.srv  SetJointAngles.srv  SetJointWaypoints.srv  SetPose.srv  SetTwist.srv  StartFaceServoing.srv
src/scripts/: arduino_estop_button.ino  autonomous_checker.py  clean_orchestrator.py  estop_monitor.py  force_feedback.py  force_visualizer.py  og_orchestrator.py  orchestrator.py  orchestrator2.py  orchestrator3.py  robot_controller_ros2.py  servoing_tester.py  simple_orchestrator.py
src/servoing/: package.xml  setup.cfg  setup.py
src/servoing/servoing/: servoing_node.py  servoing_node2.py
